--- a/Style.css
+++ b/Style.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  background: #5e35b1;
+  background: #df0e0e;
   color: white;
   padding: 20px;
   text-align: center;
@@ -25,7 +25,7 @@ header {
   top: 15px;
   right: 20px;
   background: #fff;
-  color: #5e35b1;
+  color: #e91818;
   border: none;
   padding: 8px;
   border-radius: 8px;
